k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fcs-identity
  namespace: fcs-identity
  labels:
    app.kubernetes.io/name: fcs-identity
    app.kubernetes.io/part-of: fcs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: fcs-identity
  template:
    metadata:
      labels:
        app.kubernetes.io/name: fcs-identity
        app.kubernetes.io/part-of: fcs
    spec:
      containers:
        - name: api
          image: ghcr.io/group10-tc-01/fcs-identity:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
