k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fcs-identity
  namespace: fcs-identity
spec:
  ingressClassName: fcs-traefik
  rules:
    - host: fcs-identity.flaviojcf.com.br
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fcs-identity-service
                port:
                  number: 8080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: fcs-identity-service
                port:
                  number: 8080
